# mass_flow_unit

./: 2do.txt  README.md  arduino_sensor_status.py  config.py  exp_http_server.py  exp_view.py  exp_view_prototype.py  init.bat  ipvh_server.py  ipvh_srv.py  main.py  main_test.py  main_test2.py  main_test3.py  main_test4.py  main_test5.py  mass_flow_client.py  mass_flow_connection.py  mass_flow_info_reader.py  mass_flow_orquestrator_parallel.py  mass_flow_server_fastapi.py  mass_flow_setup.py  mass_flow_socket_client.py  mass_flow_socket_data_receiver.py  mass_flow_socket_data_sender.py  mass_flow_socket_server.py  mass_flow_socket_server_v2.py  mass_flow_srv.py  mass_flow_unit.py  mass_flow_unit_unused.py  notes.md  orquestrador_mass_flow.py  orquestrador_mass_flow_v2.py  orquestrador_mass_flow_v3.py  parametros.json  parametros.py  pyproject.toml  requirements.txt  rotina.py  rotina_thread.py  (+10 more)
arquivos_de_rotinas/: sequencia_argumentos.json  sequencia_argumentos2.json
config/: arduino.json  experimento.json  experimento_ultimos_parametros_tempo.txt  lcr.json  mass_flow.json  parametros.json
nucleo/: arduino_orquestrator_parallel.py  arduino_setup.py  construtor_tabela_resultados.py  ipvh_srv.py  kill_ipvh_srv.py  lcr_setup.py  mass_flow_client.py  mass_flow_info_reader.py  mass_flow_orquestrator_parallel.py  mass_flow_setup.py  orquestrator_parallel.py  orquestrator_setup.py  paths.py  update_experiment_info copy.py  update_experiment_info.py  update_experiment_time.py
old/: teste.py  teste2.py
resources/: notes.md
templates/: about.html  contact.html  (+8 more)
(+73 files in other folders)
