[project]
name = "mass-flow-unit"
version = "0.1.0"
description = "Projeto de orquestrador de dispositivos para e-Nose, laboratório quimica UnB/Campus de Planaltina"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pyserial>=3.5",
    "requests>=2.32.3",
]
